--- a/src/components/Qec/Qec.css
+++ b/src/components/Qec/Qec.css
@@ -1,118 +1,166 @@
 .qecHead-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+
+.qecIntro-header {
+  background-image: url("../../../public/Qec.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 450px;
+  position: relative;
+}
+
+.qecIntro-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: rgb(92, 0, 0);
+  font-size: 300%;
+  font-weight: 600;
+}
+.Qec-section {
+  background-size: cover;
+  background-position: center;
+  padding: 50px 0;
+}
+
+.Qec-container {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  animation: heading 1s ease-in-out;
+  margin-bottom: 8%;
+}
+
+.Qec-content {
+  text-align: left;
+  padding: 0 50px;
+  width: 120%;
+}
+
+.QecIntro-heading1 {
+  font-size: 45px;
+  font-weight: bold;
+  text-align: center;
+  color: rgb(92, 0, 0);
+  padding-left: 40%;
+  margin-bottom: 35px;
+}
+
+.Qec-points-container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 20px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.Qec-point-box {
+  background-color: #fff3f3;
+  padding: 20px;
+  border-radius: 6px;
+  width: 140%;
+  margin: 0 auto;
+  box-shadow: 0px 0px 10px rgba(177, 27, 27, 0.2);
+}
+
+.Qec-point-box:nth-of-type(2) {
+  background-color: #920101;
+  margin-left: 2%;
+}
+
+.Qec-point-box:nth-of-type(3) {
+  margin-left: 4%;
+}
+.Qec-point-box:nth-of-type(2) .Qec-point {
+  color: #e9e9e9;
+}
+.Qec-point {
+  margin: 0;
+  line-height: 1.5;
+  font-size: 19px;
+  font-family: "Times New Roman", Times, serif;
+}
+.Qec-point-box {
+  opacity: 0;
+  transform: translateX(-50px);
+  transition: opacity 1s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.Qec-point-box.show {
+  opacity: 1;
+  transform: translateX(0);
+  animation-duration: 10s;
+}
+
+@media screen and (max-width: 768px) {
+  .qecHead-container {
+    margin-bottom: 40px;
   }
-  
+
   .qecIntro-header {
-    background-image: url('../../../public/shade.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 300px;
-    position: relative;
+    height: 120px;
   }
-  
-  
+
   .qecIntro-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: rgb(136, 133, 133);
-    font-size: 300%;
-
+    font-size: 100%;
   }
+
   .Qec-section {
-    background-color: rgb(245, 241, 241);
-    background-size: cover;
-    background-position: center;
-    padding: 50px 0;
+    padding: 30px 0;
   }
-  
+
   .Qec-container {
-    display: grid;
-    grid-template-columns: 1.5fr 1fr;
-    align-items: center;
-    justify-content: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    animation: heading 1s ease-in-out;
-
-
-
-    
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+    padding: 0;
   }
-  
+
   .Qec-content {
-    text-align: left;
-    padding: 0 50px;
-     width: 120%;
+    padding: 0 20px;
+    width: 100%;
   }
-  .QecIntro-heading1 {
-    font-size: 42px;
-    font-weight: bold;
-    text-align: left;
-    color: #1d1c1c;
-    padding-left: 6%;
 
-    margin-bottom: 50px;
-  }
-  
-  .Qecred-underline {
-    position: absolute;
-    width: 18%;
-    height: 4px;
-    background-color: #b8101e;
-    top: 86%;
-    left: 23%;
-    animation: underline 2s ease-in-out infinite;
-    transform: translateX(-50%); /* Center the red line horizontally */
-  }
-  .Qec-list {
-    list-style: disc;
-    margin: 0;
-    padding-left: 6%;
-    list-style-type: disc;
-    width: 80%;
-  }
-  
-  .Qec-list li {
+  .QecIntro-heading1 {
+    font-size: 22px;
+    padding-left: 4px;
     margin-bottom: 20px;
   }
-  
-  .Qec-list p {
+
+  .Qec-point-box {
+    width: 100%;
     margin: 0;
-    line-height: 1.5;
-    font-size: 17px;
   }
-  .Qec-image {
-    background-image: url("../Qec/assests/Qecbg.png");
-    background-size: cover;
-    background-position: center;
-    height: 430px;
-    width: 100%; /* decrease the width to 15% */
-    border-radius: 20px;
+  .Qec-point-box {
+    opacity: 0;
+    transform: translateX(-20px);
+    transition: opacity 1s ease-in-out, transform 0.5s ease-in-out;
   }
-  @keyframes underline {
-    0% {
-      transform: translateX(-50%) scaleX(0); /* Start with no width */
-    }
-    50% {
-      transform: translateX(-50%) scaleX(1.2); /* Scale up to a little larger than the original width */
-    }
-    100% {
-      transform: translateX(-50%) scaleX(0); /* End with no width again */
-    }
+
+  .Qec-point-box.show {
+    opacity: 1;
+    transform: translateX(0);
+    animation-duration: 10s;
   }
-  @keyframes heading {
-    0% {
-      transform: translateY(-50px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
+
+  .Qec-point-box:nth-of-type(2) {
+    margin-left: 0;
   }
+
+  .Qec-point-box:nth-of-type(3) {
+    margin-left: 0;
+  }
+
+  .Qec-point {
+    font-size: 16px;
+  }
+}
