--- a/src/components/Qec/Qecdirector.css
+++ b/src/components/Qec/Qecdirector.css
@@ -1,116 +1,83 @@
-
-.director-container{
-    background-color: #e9e9e9;
-    padding-top: 80px;
-    padding-bottom: 90px;
-    animation: heading 1s ease-in-out;
-
+.director-container {
+  background-color: #920101;
+  display: flex;
+  height: 70vh;
+  width: 94%;
+  margin: 0 auto;
+  margin-bottom: 10%;
+  border-radius: 10px;
 }
-.Qecbanner {
-    background-color: #880606;
-    padding: 10px 10px;
+
+.director-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 1100px;
+  width: 100%;
+}
+
+.director-image {
+  margin-top: -300px;
+  margin-right: 5px;
+}
+
+.director-image img {
+  width: 370px;
+  border-radius: 20px;
+}
+
+.director-message {
+  color: #ece9e9;
+  max-width: 700px;
+  margin-right: -100px;
+  margin-left: 60px; /* Added margin-left property */
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.QecDirectorHeading {
+  color: #ffffff;
+  font-size: 40px;
+  font-weight: 600;
+  margin-bottom: 4%;
+  font-family: Lato;
+}
+@media only screen and (max-width: 768px) {
+  .director-container {
+    height: auto;
+    flex-direction: column;
+  }
+
+  .director-section {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+  }
+
+  .director-image {
+    margin-top: 12%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .director-image img {
+    width: 100%;
+    border-radius: 0;
+  }
+  .QecDirectorHeading {
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 800;
+    margin-bottom: 4%;
+    font-family: Lato;
+  }
+  .director-message {
+    max-width: 90%;
+    margin-right: 0;
+    margin-left: 0;
     text-align: center;
-    width: 40%;
-    margin: 10px auto 30px;
-    padding-left: 6%;
-    margin-top: -50px;
-    margin-right: 54%;
-    animation: heading 1s ease-in-out;
-
-  }
-.Qecbanner h1 {
-    margin: 0;
-    font-size: 24px;
-    text-align: left;
-    color: beige;
-    font-family: Arial, Helvetica, sans-serif;
-    animation: heading 1s ease-in-out;
-
-}
-  .director-message{
-    text-align: left;
-    padding-left: 6%;
-    width: 80%;
-    animation: heading 1s ease-in-out;
-
-  }
-  
-
-  
-  .Qecbanner2 {
-    background-color: #880606;
-    padding: 10px 10px;
-    text-align: center;
-    width: 40%;
-    margin: 10px auto 30px;
-    padding-left: 6%;
-    margin-top: -1px;
-    margin-right: 54%;
-  }
-.Qecbanner2 h1 {
-    margin: 0;
-    font-size: 24px;
-    text-align: left;
-    color: beige;
-    font-family: Arial, Helvetica, sans-serif;
-    animation: heading 1s ease-in-out;
-
-}
-  .vision-message{
-    text-align: left;
-    padding-left: 6%;
-    width: 80%;
-    animation: heading 1s ease-in-out;
-
-  }
-  .vision-message ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .vision-message ul li:before {
-    content: "\2192";
-    color: #880606;
-    font-size: 25px;
-    margin-right: 10px;
-  }
-  
-  .vision-message h3 {
-    color: #880606;
-    font-weight: bold;
-    font-size: 25px;
-    animation: heading 1s ease-in-out;
-
-  }
-  
-    
-  .Qecbanner4 {
-    background-color: #880606;
-    padding: 15px 15px;
-    text-align: center;
-    width: 55%;
-    margin: 10px auto 30px;
-    padding-left: 2%;
-    margin-top: -1px;
-    margin-right: 39%;
-    animation: heading 1s ease-in-out;
-
-  }
-  .Qecbanner4 h1 {
-    margin: 0;
-    font-size: 24px;
-    text-align: left;
-    color: beige;
-    font-family: Arial, Helvetica, sans-serif;
-}
-@keyframes heading {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
+    text-align: justify;
+    text-justify: inter-word;
   }
 }
